feat: removed environment variables from code...

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ TWITTER_CONSUMER_KEY=LxlyDwAZdbW0WIQXopfLzUHiK
 TWITTER_CONSUMER_SECRET=bV5KpXHPRVId6qr25nHrA4p3boCtqF8BFgFUsst7i2TPkvKIVc
 TWITTER_ACCESS_TOKEN=1331391024124588034-CeZHNhkwxAXYoGP4eTgK51nwLvLgtg
 TWITTER_ACCESS_TOKEN_SECRET=0cOXBr8rykQ5pIWsQKrc1MmnHiFOiZPZTKNQz7BvGgNpp
-TWITTER_CALLBACK_URL=localhost:3000/auth/callback
+TWITTER_CALLBACK_URL=https://milton-x-auth.onrender.com/auth/callback
