--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 TWITTER_CONSUMER_KEY=LxlyDwAZdbW0WIQXopfLzUHiK
+TWITTER_CLIENT_ID=eVpCV1ZYTlBlR0FJLUZFYlR3eGU6MTpjaQ
 TWITTER_CONSUMER_SECRET=bV5KpXHPRVId6qr25nHrA4p3boCtqF8BFgFUsst7i2TPkvKIVc
+TWITTER_CLIENT_SECRET=TK8X-aDjk41RDhegac_RIoIUktiCOZlvy2Zu8Q02hIDWeb0SO_
 TWITTER_ACCESS_TOKEN=1331391024124588034-CeZHNhkwxAXYoGP4eTgK51nwLvLgtg
 TWITTER_ACCESS_TOKEN_SECRET=0cOXBr8rykQ5pIWsQKrc1MmnHiFOiZPZTKNQz7BvGgNpp
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAGJ9vwEAAAAAkv8aL5cEIsZQPG0zZUQxPtrGAIA%3Dud4kFcfhBA3agZ5MekRqgBhYykN4un0DMBzXHMwBv7XMioLFce
 TWITTER_CALLBACK_URL=https://milton-x-auth.onrender.com/auth/callback
