--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"  
+    "start": "node src/server.js"
   },
   "keywords": [
     "twitter",
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
