--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "keywords": [
     "twitter",
     "web_service",
-    "api"
+    "api",
+    "oauth"
   ],
   "author": "MiltonBlack",
   "license": "ISC",
@@ -21,7 +22,10 @@
     "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/node": "^22.5.5",
     "nodemon": "^3.1.4"
   }
 }
