used credentials for OAuth2.0 signin...

--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ TWITTER_ACCESS_TOKEN_SECRET=0cOXBr8rykQ5pIWsQKrc1MmnHiFOiZPZTKNQz7BvGgNpp
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAGJ9vwEAAAAAkv8aL5cEIsZQPG0zZUQxPtrGAIA%3Dud4kFcfhBA3agZ5MekRqgBhYykN4un0DMBzXHMwBv7XMioLFce
 TWITTER_CALLBACK_URL=http://localhost:3000/auth/callback
 TWITTER_CALLBACK_URL_PROD=https://milton-x-auth.onrender.com/auth/callback
+
+
+
+# PAID TWITTER DEVELOPER CREDENTIALS
+APP_ID=26929091
+Client_ID=SF9ibENqOWdGZzNTbU9GVk1QUDk6MTpjaQ
+Client_Secret=hJUWdE_EW6XZASrm2tDI6ZQrBkC_e-raO-FkzVWGWaE72cvdty
