feat: successfully done twitter oauth_v2...

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+PORT=4999
+
 TWITTER_CONSUMER_KEY=LxlyDwAZdbW0WIQXopfLzUHiK
 TWITTER_CLIENT_ID=eVpCV1ZYTlBlR0FJLUZFYlR3eGU6MTpjaQ
 TWITTER_CONSUMER_SECRET=bV5KpXHPRVId6qr25nHrA4p3boCtqF8BFgFUsst7i2TPkvKIVc
@@ -6,8 +8,8 @@ TWITTER_ACCESS_TOKEN=1331391024124588034-CeZHNhkwxAXYoGP4eTgK51nwLvLgtg
 TWITTER_ACCESS_TOKEN_SECRET=0cOXBr8rykQ5pIWsQKrc1MmnHiFOiZPZTKNQz7BvGgNpp
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAGJ9vwEAAAAAkv8aL5cEIsZQPG0zZUQxPtrGAIA%3Dud4kFcfhBA3agZ5MekRqgBhYykN4un0DMBzXHMwBv7XMioLFce
 
-TWITTER_CALLBACK_URL=http://localhost:3000/auth/callback
-TWITTER_CALLBACK_URL_PROD=https://milton-x-auth.onrender.com/auth/callback
+TWITTER_CALLBACK_URL=http://localhost:4999/api/v1/auth/twitter-callback
+TWITTER_CALLBACK_URL_PROD=https://milton-x-auth.onrender.com/api/v1/auth/twitter-callback
 
 # PAID TWITTER DEVELOPER CREDENTIALS
 APP_ID=26929091
